# qns

./: .gitignore  CLAUDE.md  NOTES.md  notes-cleanup-plan.md  notes-external-bns-toolchain.md  notes-flash-state-directory.md  notes-modern-rom-disassembly.md  notes-pc-disk-fix.md  notes-review-phonemes.md  notes-software-bns.md  notes-ssi263-re.md  pyproject.toml  synth.md
docs/: external-bns-toolchain.md  sc02-phoneme-mapping.md
investigations/: bs2-folder-init-illegal-opcode.md  bs2-state-lifecycle.md  fresh-state-file-command-timeout.md  pc-disk-storage-device-missing.md
prompts/: connect-ssi263-int1.md  extract-firmware-tool.md  fix-ssi263-int1-timing.md  handoff.md  interrupt-tracing-tool.md  load-all-rom-banks.md  phoneme-duration-timing.md  silent-startup-investigation.md  ssi263-mame-scout.md  ssi263-other-implementations-scout.md  ssi263-our-implementation-scout.md  z180-investigation.md
qns/: __init__.py  bns.py  cli.py  cpu.py  input_driver.py  io.py  loader.py  memory.py  pc_disk.py  profiles.py  ssi263.py  stdio.py
reports/: connect-ssi263-int1-report.md  extract-firmware-tool-report.md  fix-ssi263-int1-timing-report.md  interrupt-tracing-tool-report.md  load-all-rom-banks-report.md  phoneme-duration-timing-report.md  ssi263-mame-raw.md  ssi263-other-implementations-raw.md  ssi263-our-implementation-raw.md
sdk/: bns_api.asm  bns_crt0.asm
tests/: test_bns.py  test_bns_external.py  test_bs2_dictionary.py  test_bs2_external_program.py  test_bs2_harness.py  test_bs2_help.py  test_bs2_stdio_harness.py  test_cpu.py  test_devices.py  test_find_rom_pattern.py  test_io.py  test_loader.py  test_memory.py  test_pc_disk.py  test_ssi263.py  test_ssi263_pcm.py  test_stdio.py  test_stdio_process.py  test_synth.py  test_z_core_migration.py
toolchain/: bns.cfg  setup-teraterm.ps1  setup-z88dk.ps1
tools/: bns_external.py  (+18 more)
(+23 files in other folders)
