[project]
name = "qns"
version = "0.1.0"
description = "Q's Note Speak - Blazie BNS emulator"
requires-python = ">=3.11"
dependencies = [
    "cffi>=1.16.0",
    "setuptools>=70.0.0",
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling", "cffi>=1.16.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qns"]

[tool.pytest.ini_options]
markers = [
    "manual: marks tests as requiring manual verification (deselect with '-m \"not manual\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
