[project]
name = "qns"
version = "0.1.0"
description = "Q's Note Speak - Blazie BNS emulator"
requires-python = ">=3.11"
dependencies = [
    "z180",
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "cffi>=1.16.0",
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "setuptools>=70.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qns"]

[tool.uv.sources]
z180 = { git = "https://github.com/ctoth/z-core", rev = "9142185ef8d9d9a93d909e422d3a9a287f1d4f02", subdirectory = "crates/z180-py" }

[tool.pytest.ini_options]
markers = [
    "manual: marks tests as requiring manual verification (deselect with '-m \"not manual\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "hypothesis>=6.156.9",
    "pytest>=9.0.2",
]
